--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,37 @@
 </head>
 <body>
 
+
+<nav class="navbar navbar-inverse bg-faded">
+<div class="navbar-header">
+  <a class="navbar-brand" href="">Logo</a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item">
+      <%= link_to 'Add Order', new_order_path %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'all Orders', orders_path %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'all items', items_path %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'add item', new_item_path %>
+    </li>
+    
+    <li class="nav-item">
+      <%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %>
+
+    </li>
+    
+
+  </ul>
+  
+</div>
+</nav>
+
 <%= yield %>
+
 
 </body>
 </html>
