--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,11 @@
 <h2>Sign up</h2>
+ 
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name) , :html=>{:multipart=>true} )  do |f| %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  
   <%= devise_error_messages! %>
+
+
 
   <div class="field">
     <%= f.label :email %><br />
@@ -21,9 +25,20 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+  <div class="form-group">
+        <%= f.label :avatar, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-6">
+            <%= f.file_field :avatar %>
+        </div>
+  </div>
+
+<!-- avatar -->
+
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
+  <!-- avatar  -->
 <% end %>
 
 <%= render "devise/shared/links" %>
