--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -27,10 +27,10 @@
     <%= f.label :status %><br>
     <%= f.text_field :status %>
   </div>
-  <div class="field">
+  <!-- <div class="field">
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
-  </div>
+  </div> -->
   <div class="actions">
     <%= f.submit %>
   </div>
