--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,6 +26,14 @@
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
+  <br>
+  <div class="field">
+        <%= f.label :avatar, class: 'col-sm-1 control-label'  %>
+        <div class="col-sm-2">
+            <%= f.file_field :avatar %>
+        </div>
+  </div>
+
 
   <div class="actions">
     <%= f.submit "Update" %>
