--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,9 +25,9 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="form-group">
-        <%= f.label :avatar, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
+  <div class="field">
+        <%= f.label :avatar, class: 'col-sm-1 control-label'  %>
+        <div class="col-sm-2">
             <%= f.file_field :avatar %>
         </div>
   </div>
