--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,42 +10,47 @@
 
 
 <nav class="navbar navbar-inverse bg-faded">
-<div class="navbar-header">
-  <a class="navbar-brand" href="">Logo</a>
-  <ul class="nav navbar-nav">
-    
-    <li class="nav-item">
-      <%= link_to 'Add Order', new_order_path %>
-    </li>
-    <li class="nav-item">
-      <%= link_to 'all Orders', orders_path %>
-    </li>
-    <li class="nav-item">
-      <%= link_to 'all items', items_path %>
-    </li>
-    <li class="nav-item">
-      <%= link_to 'add item', new_item_path %>
-    </li>
-    
-    
-   
-   <% if current_user %>
-            <li><%= link_to 'Edit Profile',edit_user_registration_path %></li>
-            
+	<div class="navbar-header">
+	  <a class="navbar-brand" href="">Logo</a>
+	  <ul class="nav navbar-nav">   
+		   <% if current_user %>
+		          	<li class="nav-item">
+				    	<%= link_to 'Add Order', new_order_path %>
+				    </li>
 
-            <li class="nav-item">
-			      <%= link_to "Log out", destroy_user_session_path, :method => 'delete' %>
-    		</li>
+				    <li class="nav-item">
+				    	<%= link_to 'all Orders', orders_path %>
+				    </li>
 
-            <li class="round-image-50"><%= image_tag(current_user.avatar.url(:thumb)) %></li>
+				    <li class="nav-item">
+				    	<%= link_to 'all items', items_path %>
+				    </li>
 
-   <% else %>
-            <li><%= link_to 'Login', new_user_session_path %></li>
-   <% end %>  
-   	
-  </ul>
-   
-</div>
+				    <li class="nav-item">
+				    	<%= link_to 'add item', new_item_path %>
+				    </li>
+
+		            <li class="nav-item">
+		            	<%= link_to 'Edit Profile',edit_user_registration_path %>
+		            </li>
+		            
+		            <ul class="nav navbar-nav navbar-right">
+		           		<li class="nav-item" style="float:right">
+						      <%= link_to "Log out", destroy_user_session_path, :method => 'delete' %>
+			    		</li>
+
+		        	    <li class="nav-item round-image-50">
+		        	    	<%= image_tag(current_user.avatar.url(:thumb)) %>
+		        	    </li>
+			
+		            </ul>
+		            
+		   <% else %>
+		            <li><%= link_to 'Login', new_user_session_path %></li>
+		   <% end %>  
+		   	
+		</ul>   
+	</div>
 </nav>
 
 <%= yield %>
