--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
 	  <a class="navbar-brand" href="">Logo</a>
 	  <ul class="nav navbar-nav">   
 		   <% if current_user %>
+		          	
+		          	<li class="nav-item">
+				    	<%= link_to 'Home', home_index_path %>
+				    </li>
+
 		          	<li class="nav-item">
 				    	<%= link_to 'Add Order', new_order_path %>
 				    </li>
@@ -34,7 +39,7 @@
 		            	<%= link_to 'Edit Profile',edit_user_registration_path %>
 		            </li>
 		            
-		            <ul class="nav navbar-nav navbar-right">
+		            <ul class="nav navbar-nav navbar-right " style="float:right">
 		           		<li class="nav-item" style="float:right">
 						      <%= link_to "Log out", destroy_user_session_path, :method => 'delete' %>
 			    		</li>
@@ -44,9 +49,11 @@
 		        	    </li>
 			
 		            </ul>
+
 		            
 		   <% else %>
 		            <li><%= link_to 'Login', new_user_session_path %></li>
+		            <li><%= link_to 'sign up', new_user_registration_path %></li>
 		   <% end %>  
 		   	
 		</ul>   
