order images upload .. home another phase

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,13 @@
         <tbody>
        	 <% @friend.each do |friend| %>
           	<tr class="" >
-				<td><%= friend.name %></td>
+				<td><%= friend.name %> latest created </td>
+          	</tr>
+      	 <% end %>
+
+      	 <% @friend_orders.each do |friend_orders| %>
+          	<tr class="" >
+				<td><%= friend_orders.order_for %></td>
           	</tr>
       	 <% end %>
       </tbody>
