--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@order) do |f| %>
+<%= form_for @order, url:orders_path, html:{ multipart: true } do |f| %>
+
   <% if @order.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
@@ -11,22 +12,29 @@
     </div>
   <% end %>
 
-  <div class="field">
+
+
+  <div class="field ">
     <%= f.label :order_for %><br>
-    <%= f.text_field :order_for %>
+    <%= f.select :order_for, options_for_select([['breakfast'], ['lunch'] , ['dinner']]) %>
   </div>
+  
   <div class="field">
     <%= f.label :order_from %><br>
     <%= f.text_field :order_from %>
   </div>
+
   <div class="field">
-    <%= f.label :menu_image %><br>
-    <%= f.text_field :menu_image %>
+    <%# form_for @order, :html => { :multipart => true } do |f| %>
+    <%= f.label :avatar %><br>
+    <%= f.file_field :avatar %>
+    <%# end %>
   </div>
-  <div class="field">
+  
+  <!-- <div class="field">
     <%= f.label :status %><br>
     <%= f.text_field :status %>
-  </div>
+  </div> -->
   <!-- <div class="field">
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
