--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,14 +2,14 @@
 
 <h1>Listing Orders</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Order for</th>
       <th>Order from</th>
       <th>Menu image</th>
       <th>Status</th>
-      <th>User</th>
+      <th>User id </th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,12 +19,14 @@
       <tr>
         <td><%= order.order_for %></td>
         <td><%= order.order_from %></td>
-        <td><%= order.menu_image %></td>
+        <td class="orders_list">
+        <%= image_tag order.avatar.url(:thumb) if order.avatar? %>
+        </td>
         <td><%= order.status %></td>
-        <td><%= order.user %></td>
+        <td><%= order.user_id %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td ><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
