--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,9 +49,13 @@
 				    </li>
 
 				    <li class="nav-item">
-				    	<%= link_to 'all items', items_path %>
+				    	<%= link_to 'Groups', groups_path %>
 				    </li>
 
+				    <li class="nav-item">
+				    	<%= link_to 'all items', items_path %>
+				    </li>
+				   
 				    <li class="nav-item">
 				    	<%= link_to 'add item', new_item_path %>
 				    </li>
