--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,10 @@
 				    	<%= link_to 'add item', new_item_path %>
 				    </li>
 
+				     <li class="nav-item">
+				    	<%= link_to 'My Friends', users_index_path %>
+				    </li>
+
 		            <li class="nav-item">
 		            	<%= link_to 'Edit Profile',edit_user_registration_path %>
 		            </li>
