--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,6 +33,8 @@
         <%= friend_orders.name %>
         <br>
         <%= friend_orders.order_for %>
+        <br>
+        <%= friend_orders.order_from %>
         </td>
           	</tr>
       	 <% end %>
