--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
 
-
+  <div class="container">
   <div class="field ">
     <%= f.label :order_for %><br>
     <%= f.select :order_for, options_for_select([['breakfast'], ['lunch'] , ['dinner']]) %>
