--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body background='/assets/images/wood2.jpg'>
+	<div class="container">
 
 <!-- ////////////////////////// -->
 <nav class="navbar navbar-inverse">
@@ -17,7 +18,7 @@
 					</button>
       			</div>
       			<div class="navbar-brand">
-      				<a href="#">YALLA NOTLOB</a>
+      				<%= link_to 'YALLA NOTLOB', home_index_path %>
       			</div>
       			<div class="collapse navbar-collapse" id="my-navbar">
     				<ul class="nav navbar-nav">
