more and more bootstrap :D

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
 
-<div class="col-sm-1"></div>
-<div class="col-sm-5">
-      <h2>Latest Orders</h2>
+
+
+
+<div class="col-sm-5" >
+    <h2 style="color: #ffffff;">Latest Orders</h2>
+  
       <table class="table  "  >
         <tbody>
 
@@ -18,12 +21,15 @@
         <% end %>
         </tbody>
       </table>
-    </div>
+  
+</div>
 
       
 
- <div class="col-sm-5">
-    <h2>Latest Orders</h2>
+<div class="col-sm-5">
+    <h2 style="color: #ffffff;">Latest Orders</h2>
+
+
       <table class="table " >
         <tbody>
        	 
@@ -40,4 +46,5 @@
       	 <% end %>
       </tbody>
     </table>
+
 </div>
