--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,63 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>YallaNotlob</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body background='/assets/images/wood2.jpg'>
-	<div class="container">
-
-<!-- ////////////////////////// -->
-<nav class="navbar navbar-inverse">
-			<div class="container-fluid">
-    			<div class="navbar-header">
-    				<button class="navbar-toggle" data-toggle="collapse" data-target="#my-navbar">
-						<span class="glyphicon glyphicon-align-justify"></span>
-					</button>
-      			</div>
-      			<div class="navbar-brand">
-      				<%= link_to 'YALLA NOTLOB', home_index_path %>
-      			</div>
-      			<div class="collapse navbar-collapse" id="my-navbar">
-    				<ul class="nav navbar-nav">
-    				<% if current_user %>
-      					<li class="tab-list"><%= link_to 'Home', home_index_path %></li>
-      					<li class="tab-list"><%= link_to 'Add Order', new_order_path %></li>
-      					<li class="tab-list"><%= link_to 'all Orders', orders_path %></li>
-						<li class="tab-list"><%= link_to 'Groups', groups_path %></li>
-      					<li class="tab-list"><%= link_to 'all items', items_path %></li>
-      					<li class="tab-list"><%= link_to 'add item', new_item_path %></li>
-      					<li class="tab-list"><%= link_to 'My Friends', users_index_path %></li>
-    				</ul>
-    				<ul class="nav navbar-nav navbar-right">
-    					<li class="nav-item round-image-50">
-		        	    	<%= image_tag(current_user.avatar.url(:thumb)) %>
-		        	    </li>
-    					<li class="dropdown">
-    						<a class="dropdown-toggle" data-toggle="dropdown" href=""><%= current_user.name %>
-        					<span class="caret"></span></a>
-    						<ul class="dropdown-menu" role="menu">
-          						<li><%= link_to 'Edit Profile',edit_user_registration_path %></li>
-          						<li><%= link_to "Log out", destroy_user_session_path, :method => 'delete' %></li>
-          					</ul>
-    					</li>
-    					<li></li>
-        
-        
-      
-    				</ul>
-    			<% else %>
-		            <li><%= link_to 'Login', new_user_session_path %></li>
-		            <li><%= link_to 'sign up', new_user_registration_path %></li>
-		   		<% end %>  
-    			</div>
-  			</div>
-		</nav>
+<%= render "layouts/header" %>
 <%= yield %>
-
-
-</body>
-</html>
+<%= render "layouts/footer" %>
 
