--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
-
+  <div class="col-sm-2 pull-right" style="direction: rtl;">
+    <img src="assets/fat.gif" class="gap-right" style="width: 200px; height: 200px;">
+  </div>
 
 
 
@@ -27,7 +29,7 @@
       
 
 <div class="col-sm-5">
-    <h2 style="color: #ffffff;">Latest Orders</h2>
+    <h2 style="color: #ffffff;">Friends Activity</h2>
 
 
       <table class="table " >
