--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,7 +32,7 @@
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
   <br>
-  <div class="field">
+  <div class="field clearfix">
         <%= f.label :avatar, class: 'col-sm-1 control-label'  %>
         <div class="col-sm-2">
             <%= f.file_field :avatar %>
