--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<div class="col-sm-12 clearfix"></div>
+<h2 >Sign up</h2>
  
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name) , :html=>{:multipart=>true} )  do |f| %>
 
@@ -28,7 +29,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="field">
+  <div class="field clearfix">
         <%= f.label :avatar, class: 'col-sm-1 control-label'  %>
         <div class="col-sm-2">
             <%= f.file_field :avatar %>
