--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,10 +5,8 @@
 	</div>
 	<div class="col-lg-6">
     <div class="input-group">
-    <%= form_for(@group, remote: true) do |g| %>
-       <%= g.text_field :group ,placeholder:"add new group"%>
-       <%= g.submit "add new Group",id:'addgroup' %>
-    <% end %>
+    <input type="text" class="form-control" placeholder="add new group" aria-describedby="basic-addon2" id="gname">
+  	<span class="input-group-addon" id="addgroup">Add group</span>
     </div>
   </div>
 </div>
@@ -21,10 +19,10 @@
 		  </div>
 		  <div class="panel-body" id="garea">
 		    <%= @groups.each do |group| %>
-		    	<div class="row">
-		    		<label onclick="showarea(<%= group.group %>)"><%= group.group %></label>
-		    		<button><a href=""><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a></button>	
-		    		<button><a href=""><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></button>	
+		    	<div class="row" id=<%= group.id %> >
+		    		<label ><%= group.gname %></label>
+		    		<button onclick="friendsInGroup(<%= group.id %>)"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></button>	
+		    		<button onclick="removegroup(<%= group.id %>)" ><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
 		    	</div>
 			<% end %>
 		  </div>
@@ -33,7 +31,7 @@
 	<div class="col-lg-6 " id="groupdiv">
 		<div class="panel panel-default">
 		  <div class="panel-heading">
-		    <h3 class="panel-title" id="groupname"></h3>
+		    <h3 class="panel-title" id="groupselectedname"></h3>
 		  </div>
 		  <div class="panel-body">
 		    	<div class="row">
@@ -41,10 +39,13 @@
 					</div>
 					<div class="col-lg-6">
 						<div class="input-group">
-					      <input type="text" class="form-control" placeholder="Add New Friend...">
+					      <input type="text" class="form-control" placeholder="Add New Friend..." id="searchfriend">
 					      <span class="input-group-btn">
-					        <button class="btn btn-default" type="button">Add</button>
+					        <button class="btn btn-default" type="button" id="searchfriendbtn">Add</button>
 					      </span>
+					    </div>
+					    <div id="groupus">
+
 					    </div>
 					</div>
 		    	</div>
@@ -54,13 +55,170 @@
 </div>
 <script>
 
-/*$("#new_group").on("ajax:success", (e, data, status, xhr) ->
-	    $("#new_group").append xhr.responseText
-).on "ajax:error", (e, xhr, status, error) ->
-    $("#new_group").append "<p>ERROR</p>"
-*/
-/*$("#garea").append("<div class='row'><label onclick='showarea("+inp+")' >"+inp+"</label><button><a href=''><span class='glyphicon glyphicon-user' aria-hidden='true'></span></a></button><button><a href=''><span class='glyphicon glyphicon-remove' aria-hidden='true'></span></a></button></div>")*/
 
+$("#addgroup").on("click",function(){
+	var inp = $("#gname").val();
+	$.ajax({
+		url:'/groups',
+		type:'post',
+		data:{'gname':inp},
+		
+		success:function(response){
+			console.log("suc");
+		$("#garea").append("<div class='row' id='"+inp+"'><label>"+inp+"</label></div>");
+			$("#gname").val("");
+		},
+		error:function(error){
+			console.log("err");
+			console.log(error);
+		}
+	});
+	
+});
 
+function removegroup(groupid){
+	//console.log(groupid);
+	$.ajax({
+		url:'/groups/'+groupid,
+		type:'delete',
+		//data:{'gid':groupid},
+		success:function(response){
+			console.log("suc");
+			$("#"+groupid+"").empty();
+			$("#groupus").empty();
+			groupselectedname.text("");
+
+		},
+		error:function(error){
+			
+			console.log(error);
+			console.log("err");
+		}
+
+	});
+
+		$.ajax({
+				url:'/deleteguser',
+				method:'get',
+				data:{'gid':groupid},
+				success:function(response){
+					console.log('suc');
+				},
+				error:function(error){
+					console.log(error);
+				}
+
+			});
+}
+
+var recentgroup = "";
+var showgroup = 0;
+var friendsInGroup = function(groupid ){
+	//$("#groupselectedname").text(groupname);
+	if(showgroup==groupid){
+
+	}else{
+		showgroup=groupid;
+		recentgroup = groupid;
+		$("#groupus").empty();
+		$.ajax({
+			url:'/gusers/'+groupid,
+			method:'get',
+			//dataType:'json',
+			success:function(response){
+				console.log('suc');
+				for(i=0;i<response.length;i++){
+					$.ajax({
+						url:'/getUserData',
+						method:'post',
+						data:{'uid':response[i].user_id},
+						success:function(resp){
+							$("#groupus").append("<div class='row' id='gf"+resp[0].id+"'><label>"+resp[0].email+"</label><button onclick='removeFriendFromGroup("+resp[0].id+","+groupid+")'>remove</button></div>");
+						},
+						error:function(error){
+							console.log('err');
+						}
+					});
+				}
+			},
+			error:function(error){
+				console.log('err');
+			},
+			async:true
+		});
+	}
+}
+
+var removeFriendFromGroup = function(fid,gid){
+	$.ajax({
+		url:'/gusers/'+fid,
+		method:'delete',
+		data:{'gid':gid},
+		success:function(response){
+			$("#gf"+fid+"").empty();
+		},
+		error:function(error){
+			console.log(error);
+		}
+	});
+}
+
+$("#searchfriendbtn").on("click",function(){
+	if (recentgroup!=""){
+		var inp = $("#searchfriend").val();
+		$.ajax({
+			url:'/searchuser',
+			method:'get',
+			data:{'friend':inp},
+			success:function(response){
+				
+				if(response[0] == null){
+					console.log('notfound');
+					alert('email is not correct');
+
+				}else{
+					var found = false;
+					$.ajax({
+							url:'/gusers/'+recentgroup,
+							method:'get',
+							//dataType:'json',
+							success:function(re){
+								for(i=0;i<re.length;i++){	
+									if(re[i].user_id == response[0].id) found = true;
+								}
+
+								if(found){
+								alert("user is already in group");
+								}else{
+									
+								$.ajax({
+									url:'/gusers',
+									method:'post',
+									data:{'gid': recentgroup,'uid':response[0].id},
+									success:function(resp){
+										$("#groupus").append("<div class='row' id='gf"+response[0].id+"'><label>"+response[0].email+"</label><button onclick='removeFriendFromGroup("+response[0].id+","+recentgroup+")'>remove</button></div>");
+									},
+									error:function(error){
+										console.log(error);
+									}
+								});	
+								}
+							},
+							error:function(error){
+								console.log('err');
+							},
+							async:true
+						});
+				
+				}
+			},
+			error:function(error){
+				console.log(error);
+			}
+		});
+	} else{
+		alert('please select group first');
+	}
+});
 
 </script>
