--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New Order</h1>
+<div class="container-fluid">
+    <div class="row">
+      <div id="page_wrapper">
+        <div class="col-md-8">
+            <%= render 'form' %>
+        </div>
+      </div>
+        <div class="col-md-4">
+          <h4>invited firends</h4>
+          <ul id="order_friends">
 
-<%= render 'form' %>
+    			</ul>
+
+        </div>
+    </div>
+</div>
 
 <%= link_to 'Back', orders_path %>
