--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,4 +45,18 @@
     border-radius: 4px;
 }
 
+.footer_img{
+    margin-left:10px;
+}
+
+
+#footer {
+    text-align: center;
+    height: 60px;
+    color:white;
+    margin-top:20px;
+    margin-bottom:0;
+
+    padding-top: 20px;
+}
 
