--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,13 @@
 </div>
 
 	<div class="container">
-		<div class="footer" style="background: rgba(49, 27, 0, 0.8); height: 50px; border: solid 1px;">
-			<div class="center-block">
-				<p class="text-center" style="font-size: 25px; margin:15px;">here is our footer <p>
+		<div class="footer" style="background: rgba(0, 0, 0, 0.8); height: 50px; border: solid 1px;">
+			<div class="">
+				<p class="text-center" style=" color:white;font-size: 15px;"> Rails Cafeteria project developed by an ITI team copyrights @2017  
+				<img src="/assets/facebook.png" class="footer_img" width="20" height="20"/>
+				<img src="/assets/instagram.png" class="img-circle" width="20" height="20"/>
+				<img src="/assets/twitter.png" class="img-circle" width="20" height="20"/>
+				</p>
 			</div>
 		</div>
 	</div>
