--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,27 +6,18 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body style="background-image : url('/assets/wood7.jpg')">
-  <div class="clearfix">
-    <img  class="pull-left gap-left" src="/assets/pizza.png" style="width: 200px; height: 200px; margin-left: 100px;">
-
-    <img  class="pull-right gap-left" src="/assets/pizza.png" style="width: 200px; height: 200px; margin-right: 100px;">
-
-    <img class="center-block" src="/assets/title.png" style="height:150px;">
-  </div>
-  
+<body style="background-image : url('')" >
     
-	<div class="container" style="background: rgba(45, 16, 0, 0.5); border: solid #ffffff 1px;">
+	<div class="container" style=" background: rgba(0, 0, 0, 0.2); border: solid  1px;">
 
-<!-- ////////////////////////// -->
-<nav class="navbar clearfix" style="background: rgba(49, 27, 0, 0.8); height: 50px;">
-			<div class="container-fluid">
-    			<div class="navbar-header">
+<nav class="navbar navbar-inverse" style=" color:white ; background: rgba(0, 0, 0, 0.8); height: 50px;">
+			<div class="container-fluid" >
+    			<div class="navbar-header" >
     				<button class="navbar-toggle" data-toggle="collapse" data-target="#my-navbar">
 						<span class="glyphicon glyphicon-align-justify"></span>
 					</button>
       			</div>
-      			<div class="navbar-brand">
+      			<div class="navbar-brand" >
       				<%= link_to 'YALLA NOTLOB', home_index_path %>
       			</div>
       			<div class="collapse navbar-collapse" id="my-navbar">
@@ -35,7 +26,7 @@
       					<li class="tab-list"><%= link_to 'Home', home_index_path %></li>
       					<li class="tab-list"><%= link_to 'Add Order', new_order_path %></li>
       					<li class="tab-list"><%= link_to 'all Orders', orders_path %></li>
-						<li class="tab-list"><%= link_to 'Groups', groups_path %></li>
+						    <li class="tab-list"><%= link_to 'Groups', groups_path %></li>
       					<li class="tab-list"><%= link_to 'all items', items_path %></li>
       					<li class="tab-list"><%= link_to 'add item', new_item_path %></li>
       					<li class="tab-list"><%= link_to 'My Friends', users_index_path %></li>
