add notification .. test it .. next step retrieve notificaiton isa

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 
 
 <div class="col-sm-5" >
-    <h2 style="color: #ffffff;">Latest Orders</h2>
+    <h2 style="color: #00000;">Latest Orders</h2>
   
       <table class="table  "  >
         <tbody>
