--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,52 +1,68 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+<div class="col-sm-4"></div>
+<center>
+  <div class="col-sm-4">
+        
+
+      <h2>Edit <%= resource_name.to_s.humanize %></h2>
+
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= devise_error_messages! %>
+
+            <div class="field">
+              <%= f.label :name , class: ' control-label' %><br />
+              <%= f.text_field :name, autofocus: true , :class => 'form-control' %>
+            </div>
+
+            <div class="field">
+              <%= f.label :email , class: ' control-label' %><br />
+              <%= f.email_field :email, autofocus: true , :class => 'form-control' %>
+            </div>
+
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+            <% end %>
+
+            <div class="field">
+              <%= f.label :password , class: ' control-label' %> <i>(leave blank if you don't want to change it)</i><br />
+              <%= f.password_field :password, autocomplete: "off" , :class => 'form-control' %>
+            </div>
+
+            <div class="field">
+              <%= f.label :password_confirmation  , :class=> 'control-label' %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "off" , :class => 'form-control' %>
+            </div>
+
+            <div class="field">
+              <%= f.label :current_password , :class=> 'control-label' %> <i>(we need your current password to confirm your changes)</i><br />
+              <%= f.password_field :current_password, autocomplete: "off" , :class => 'form-control' %>
+            </div>
+            <br>
+            <div class="field clearfix">
+                  <%= f.label :avatar, :class=> 'control-label'  %>
+                  <div class="col-sm-">
+                      <%= f.file_field :avatar , :class => 'form-control' %>
+                  </div>
+            </div>
+
+
+            <div class="actions">
+              <%= f.submit "Update" , :class => 'btn btn-info form-control' %>
+            </div>
+    <% end %>
+
+      <h3>Cancel my account</h3>
+
+      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete  , :class => 'btn btn-danger '%></p>
+
+      <%= link_to "Back", :back %>
+
+
+
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-  <br>
-  <div class="field clearfix">
-        <%= f.label :avatar, class: 'col-sm-1 control-label'  %>
-        <div class="col-sm-2">
-            <%= f.file_field :avatar %>
-        </div>
-  </div>
+  
+</center>
 
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
