--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,60 @@
 <div class="col-sm-12 clearfix"></div>
-<h2 >Sign up</h2>
  
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name) , :html=>{:multipart=>true} )  do |f| %>
+<div class="col-sm-4"></div>
+<center>
+  <div class="col-sm-4">
+    <h2 >Sign up</h2>
 
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name) , :html=>{:multipart=>true} )  do |f| %>
+
+          
+          <%= devise_error_messages! %>
+
+          <div class="field">
+            <%= f.label :name %><br />
+            <%= f.text_field :name, autofocus: true , :class => 'form-control' %>
+          </div>
+
+          <div class="field">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true , :class => 'form-control'%>
+          </div>
+
+          <div class="field">
+            <%= f.label :password %>
+            <% if @validatable %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "off" , :class => 'form-control'%>
+          </div>
+
+          <div class="field">
+            <%= f.label :password_confirmation , class: ' control-label' %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "off" , :class => 'form-control' %>
+          </div>
+
+          <div class="field clearfix">
+                <%= f.label :avatar, class: ' control-label'  %>
+                <div class="col-sm-12">
+                    <%= f.file_field :avatar , :class => 'form-control'%>
+                </div>
+          </div>
+
+        <!-- avatar -->
+
+
+          <div class="actions">
+            <%= f.submit "Sign up", :class => 'btn btn-primary form-control' %>
+          </div>
+          <!-- avatar  -->
+    <% end %>
+
+        <%= render "devise/shared/links" %>
+
+
+  </div>
   
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field clearfix">
-        <%= f.label :avatar, class: 'col-sm-1 control-label'  %>
-        <div class="col-sm-2">
-            <%= f.file_field :avatar %>
-        </div>
-  </div>
-
-<!-- avatar -->
+</center>
 
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-  <!-- avatar  -->
-<% end %>
 
-<%= render "devise/shared/links" %>
