--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,8 @@
 <%= render "layouts/header" %>
-<%= yield %>
+<div class="container" >
+	<%= yield %>	
+</div>
+
 <%= render "layouts/footer" %>
 
 
