--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
 <body style="background-image : url('')" >
     
 	
-  
+
 <nav class="navbar navbar-inverse" style=" color:white ; background: rgba(0, 0, 0, 0.8); height: 50px;">
 			<div class="container-fluid" >
     			<div class="navbar-header" >
@@ -30,6 +30,7 @@
       					<li class="tab-list"><%= link_to 'all items', items_path %></li>
       					<li class="tab-list"><%= link_to 'add item', new_item_path %></li>
       					<li class="tab-list"><%= link_to 'My Friends', users_index_path %></li>
+                <li class="tab-list"><%= link_to 'notifications_under development', notifications_index_path %></li>
     				</ul>
     				<ul class="nav navbar-nav navbar-right">
     					<li class="nav-item round-image-50">
