--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,8 +32,21 @@
       					<li class="tab-list"><%= link_to 'My Friends', users_index_path %></li>
                 <li class="tab-list"><%= link_to 'notifications_under development', notifications_index_path %></li>
     				</ul>
+
     				<ul class="nav navbar-nav navbar-right">
-    					<li class="nav-item round-image-50">
+    				  <li class="nav-item btn-group" data-behavior="notifications" data-notifications='<%= render template: "notifications/index", formats: [:json] %>'>
+                    <a class="dropdown-toggle nav-link" type="button" data-behavior="notifications-link" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <%= fa_icon "bell" %> <span data-behavior="unread-count"></span>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenu1" data-behavior="notification-items">
+                      <!--
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                      -->
+                    </div>
+              </li>
+            	<li class="nav-item round-image-50">
 		        	    	<%= image_tag(current_user.avatar.url(:thumb)) %>
 		        	    </li>
     					<li class="dropdown">
