--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -100,7 +100,7 @@ var removeuser = function(uid){
     method:'delete',
     data:{'ordid':ordid},
     success:function(response){
-     //location.reload();
+     location.reload();
     },
     error:function(error){
       console.log(error);
