--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,17 +8,17 @@
 </head>
 <body style="background-image : url('/assets/wood7.jpg')">
   <div class="clearfix">
-    <img  class="pull-left gap-left" src="/assets/pizza.png" style="width: 200px; height: 200px; margin-left: 100px;">
+    <img  class="pull-left gap-left" src="/assets/pizza.png" style="width: 150px; height: 150px; margin-left: 100px;">
 
-    <img  class="pull-right gap-left" src="/assets/pizza.png" style="width: 200px; height: 200px; margin-right: 100px;">
+    <img  class="pull-right gap-left" src="/assets/pizza.png" style="width: 150px; height: 150px; margin-right: 100px;">
 
     <img class="center-block" src="/assets/title.png" style="height:150px;">
   </div>
   
   
-
-<nav class="navbar navbar-inverse" style=" color:white ; background: rgba(0, 0, 0, 0.8); height: 50px;">
-      <div class="container-fluid" >
+<div class="container-fluid" style="width: 75%;" >
+<nav class="navbar navbar-inverse" style="background: rgba(0, 0, 0, 0.8);">
+      
           <div class="navbar-header" >
             <button class="navbar-toggle" data-toggle="collapse" data-target="#my-navbar">
             <span class="glyphicon glyphicon-align-justify"></span>
@@ -62,7 +62,7 @@
         </div>
     </nav>
 
- <div class="container" style="background: rgba(45, 16, 0, 0.5); border: solid #ffffff 1px;">
+ <div class="container-fluid" style="width: 75%; background: rgba(45, 16, 0, 0.5); border: solid #ffffff 1px;">
 
 <!-- ////////////////////////// -->
 
