--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,14 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
+<!--
 <body style="background-image : url('/assets/wood7.jpg')">
+-->
+
+<body style="background-image : url('')">
+  
+<!--
   <div class="clearfix">
     <img  class="pull-left gap-left" src="/assets/pizza.png" style="width: 200px; height: 200px; margin-left: 100px;">
 
@@ -15,9 +22,7 @@
     <img class="center-block" src="/assets/title.png" style="height:150px;">
   </div>
   
-    
-<<<<<<< HEAD
-  
+-->  
 
 <nav class="navbar navbar-inverse" style=" color:white ; background: rgba(0, 0, 0, 0.8); height: 50px;">
       <div class="container-fluid" >
@@ -65,10 +70,16 @@
           </div>
         </div>
     </nav>
-=======
+
+
+<!-- 
+
  <div class="container" style="background: rgba(45, 16, 0, 0.5); border: solid #ffffff 1px;">
 
 <!-- ////////////////////////// -->
+
+<!--
+
 <nav class="navbar clearfix" style="background: rgba(49, 27, 0, 0.8); height: 50px;">
      <div class="container-fluid">
          <div class="navbar-header">
@@ -115,4 +126,6 @@
          </div>
        </div>
    </nav>
->>>>>>> 10a6c527f57b88fbd48da71791dc8a3a9e7a82f6
+ 
+
+ -->
